--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -14,14 +14,14 @@
         <div class="form_input rounded-tl-lg rounded-tr-lg">
           {{form.first_name}}
         </div>
-        <div class="form_input border-t-0">
+        <div class="form_input">
           {{form.last_name}}
         </div>
-        <div class="form_input border-t-0">
+        <div class="form_input">
           {{form.email}}
         </div>
-        <div class="form_input border-t-0">
-          <label for="{{form.avatar.id_for_label}}">Avatar</label>
+        <div class="form_input">
+          <label for="{{form.avatar.id_for_label}}" class="text-lg font-bold">Avatar</label>
           {{form.avatar}}
         </div>
         <div class="form_input">
