--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,7 +2,10 @@
 @tailwind components;
 
 .nav_link {
-  @apply font-semibold text-gray-700  hover:border-gray-600 border-b-2 border-transparent py-7 px-4;
+  @apply font-semibold text-gray-700  hover:border-gray-600 border-b-2 border-transparent;
+  a {
+    @apply block py-7 px-4;
+  }
 }
 
 .form {
@@ -59,9 +62,7 @@
       }
     }
   }
-  .button {
-    @apply mt-3 bg-red-500 text-white rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
-  }
+
   div:not(:nth-child(2)) {
     @apply border-t-0;
   }
@@ -70,9 +71,32 @@
   }
 }
 
+.button {
+  @apply mt-3 bg-red-500 text-white rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full outline-none;
+}
+
 .social-login {
   .button {
-    @apply rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
+    @apply rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full outline-none;
+  }
+}
+
+.profile {
+  @apply flex flex-col justify-center items-center  rounded-lg w-1/3 p-4 shadow-xl;
+  .profile__info {
+    @apply flex flex-col justify-center items-center w-full;
+    .img {
+      @apply mb-4 rounded-full w-20 h-20 flex items-center justify-center text-white text-4xl font-bold bg-gray-600 mb-3;
+    }
+    .info {
+      @apply flex justify-between w-3/4 mb-1;
+      h4 {
+        @apply mr-2 font-bold text-base;
+      }
+      span {
+        @apply text-base font-normal;
+      }
+    }
   }
 }
 
