--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<footer class="py-8 border border-gray-200 mt-16">
+<footer class="py-8 border-t border-gray-200 mt-16">
   <span class="flex justify-center">&copy; {{year}} HairBnb, Inc. All rights reserved</span>
 </footer>
