--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -7,8 +7,8 @@
 
 
 {% block content %}
-  <div class="flex flex-col items-center justify-center">
-    <div class="shadow-2xl p-6 rounded-lg">
+  <div class="background">
+    <div class="wrap">
       <form action="{% url 'users:signup' %}" method="post" class="form">
         {% csrf_token %}
         <div class="form_input rounded-tl-lg rounded-tr-lg">
