Add CSS for change-password

--- a/templates/pages/users/change_password.html
+++ b/templates/pages/users/change_password.html
@@ -7,22 +7,29 @@
   
 
 {% block content %}
-  Change {{user.email}}'s password
-  <form method="post">
-    {% csrf_token %}
-    <label for="current_password">Current Password</label>
-    <input type="password" name="current_password" id="current_password" placeholder="Your current password">
+  <div class="background">
+    <div class="wrap">
+      <h1 class="font-bold text-xl mb-6">Change {{user.email}}'s password</h1>
+      <form method="post" class="form">
+        {% csrf_token %}
+        <div class="form_input rounded-tl-lg rounded-tr-lg">
+          <input type="password" name="current_password" id="current_password" placeholder="Your current password">
+        </div>
 
-    <label for="new_password">New Password</label>
-    <input type="password" name="new_password" id="new_password" placeholder="New password">
+        <div class="form_input">
+          <input type="password" name="new_password" id="new_password" placeholder="New password">
+        </div>
 
-    <label for="verify_password">Verify Password</label>
-    <input type="password" name="verify_password" id="verify_password" placeholder="Verify your new password">
-    <button>Change Password</button>
-  </form>
+        <div class="form_input rounded-bl-lg rounded-br-lg">
+          <input type="password" name="verify_password" id="verify_password" placeholder="Verify your new password">
+        </div>
+        <button class="button">Change Password</button>
+      </form>
+      <button class="button bg-green-400">
+        <a href="{% url 'users:profile' user.pk %}">Back</a>
+      </button>
+    </div>
+  </div>
 
-  <button>
-    <a href="{% url 'users:profile' user.pk %}">Back</a>
-  </button>
 {% endblock content %}
   
