--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -5,8 +5,8 @@
 {% endblock page_title %}
 
 {% block content %}
-  <div class="flex flex-col items-center justify-center">
-    <div class="shadow-2xl p-6 rounded-lg">
+  <div class="background">
+    <div class="wrap">
       <form action="{% url 'users:login' %}" method="post" class="form">
         {% csrf_token %}
         <div class="form_input rounded-tl-lg rounded-tr-lg">
