--- a/templates/pages/users/change_password.html
+++ b/templates/pages/users/change_password.html
@@ -9,7 +9,7 @@
 {% block content %}
   <div class="background">
     <div class="wrap">
-      <h1 class="font-bold text-xl mb-6">Change {{user.email}}'s password</h1>
+      <h1 class="font-bold text-xl mb-6">Change password of {{user.email}}</h1>
       <form method="post" class="form">
         {% csrf_token %}
         <div class="form_input rounded-tl-lg rounded-tr-lg">
