--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
-  <ul class="messages">
+  <ul class="absoulte top-0 right-0 left-0 flex justify-center">
       {% for message in messages %}
-      <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      <li class="message py-3 px-5 text-white rounded-lg font-bold text-lg {% if message.tags %} {{ message.tags }}{% endif %}">{{ message }}</li>
       {% endfor %}
   </ul>
 {% endif %}
