Add CSS for photos on room detail

--- a/templates/mixins/room_card.html
+++ b/templates/mixins/room_card.html
@@ -1,4 +1,4 @@
-<ul class="grid grid-cols-4 grid-rows-2px auto-rows-400px mx-auto gap-4 gap-y-6 container px-6">
+<ul class="grid grid-cols-4 grid-rows-2-400px auto-rows-400px mx-auto gap-4 gap-y-6 container px-6">
   {% for room in rooms %}
     <li class="w-full">
       <a href="{% url 'rooms:detail' room.pk %}">
