--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -145,4 +145,20 @@
   }
 }
 
+.romm_detail {
+  @apply flex;
+  .section {
+    @apply border-b border-gray-300 mb-6 pb-6 px-6;
+    h4 {
+      @apply text-2xl font-bold mb-3;
+    }
+    ul {
+      @apply grid grid-cols-2 gap-1;
+      li {
+        @apply text-base font-medium border border-gray-300 p-2 rounded-lg;
+      }
+    }
+  }
+}
+
 @tailwind utilities;
