--- a/templates/mixins/avatar.html
+++ b/templates/mixins/avatar.html
@@ -1,5 +1,5 @@
 {% if user.avatar %}
-  <img src="{{user.avatar.url}}" class="img w-20 mb-4" alt="User avatar" title="User Avatar">
+  <img src="{{user.avatar.url}}" class="img" alt="User avatar" title="User Avatar">
 {% else %}
   <div class="img">{{user.first_name|first|upper}}</div>
 {% endif %}
