--- a/templates/pages/rooms/detail.html
+++ b/templates/pages/rooms/detail.html
@@ -54,8 +54,7 @@
             </div>
           </div>
           <div class="section flex flex-col">
-            <span class="content">&emsp;{{room.description}}</span>
-            <button class="button">Contact host</button>
+            <p class="content">&emsp;{{room.description}}</p>
           </div>
           <div class="section">
             <h4>Amenity</h4>
@@ -86,7 +85,7 @@
           <div class="calendar">Calendar</div>
         </div>
       </main>
-      <div class="clalender border-b border-gray-300 mb-6 pb-6 px-6">Calendar</div>
+      <div class="calender border-b border-gray-300 mb-6 pb-6 px-6">Calendar</div>
       <div class="room_reviews">
         <div class="text-lg font-bold mb-8">
           <i class="fas fa-star text-red-500"></i>
@@ -125,9 +124,13 @@
             <div>
               <div class="flex items-center mb-4">
                 {% if review.user.avatar %}
+                <a href="{% url 'users:profile' review.user.pk%}">
                   <img src="{{review.user.avatar.url}}" class="img w-16 h-16 mr-4" alt="User avatar" title="User Avatar">
+                </a>
                 {% else %}
+                <a href="{% url 'users:profile' review.user.pk%}">
                   <div class="img w-16 h-16 mr-4">{{review.user.first_name|first|upper}}</div>
+                </a>
                 {% endif %}
                 <div class="flex flex-col">
                   <span class="font-bold">{{review.user|capfirst}}</span>
@@ -139,41 +142,54 @@
           {% endfor %}
         </div>
       </div>
-      <div class="host-info">
+      <div class="px-6">
         <div class="host-info__left">
-          <div class="host-info__profile">
-            <img src="{{room.get_first_photo}}" width="50px" alt="" class="profile__room-avatar">
-            <div>
-              <h3>
-                <a href="{% url 'users:profile' room.host.pk%}">Host : {{room.host.first_name}}</a>
-              </h3>
-              <span>Member Since: {{joined_month}}, {{room.host.date_joined.year}}</span>
+          <div class="flex items-center mb-4">
+            {% if room.host.avatar %}
+            <a href="{% url 'users:profile' room.host.pk%}">
+              <img src="{{room.host.avatar.url}}" class="img w-16 h-16 mr-4" alt="User avatar" title="User Avatar">
+            </a>
+            {% else %}
+            <a href="{% url 'users:profile' room.host.pk%}">
+              <div class="img w-16 h-16 mr-4">{{room.host.first_name|first|upper}}</div>
+            </a>
+            {% endif %}
+            <div class="flex flex-col">
+              <h3 class="font-bold text-2xl">Host : {{room.host.first_name}}</h3>
+              <span class="text-sm text-gray-400">Member Since: {{joined_month}}, {{room.host.date_joined.year}}</span>
             </div>
           </div>
-          <div>
-            <div class="host-info__reviews">
-              <i class="fas fa-star"></i>
-              <span>Reviews {{room.reviews.count}}</span>
-            </div>
-            <div class="host-info__superhost">
+          <div class="grid grid-cols-2 gap-2">
+            <div class="w-10/12">
+              <div class="flex text-base mb-8">
+                <div class="host-info__reviews mr-4">
+                  <i class="fas fa-star text-red-500 mr-2"></i>
+                  <span>{{room.reviews.count}} review{{room.reviews.count|pluralize}}</span>
+                </div>
+                <div class="host-info__superhost">
+                  {% if room.host.superhost %}
+                  <i class="fas fa-medal text-red-500 mr-2"></i>
+                  <span>Superhost</span>
+                  {% endif %}
+                </div>
+              </div>
+              <p class="mb-4 text-lg">
+                {{room.description}}
+              </p>
               {% if room.host.superhost %}
-                Superhost
+                <h3 class="font-bold text-base mb-2">{{room.host.first_name}} is superhost.</h3>
+                <p>
+                  Superhost is a host who boasts rich experience and
+                  high rating and do their best to make their guests comfortable in their accommodation.
+                </p>
               {% endif %}
             </div>
+            <div class="flex flex-col">
+              <span class="mb-4">Response rate : 100%</span>
+              <span class="mb-6">Response time : In one hour</span>
+              <button class="button w-1/2">Contact the host</button>
+            </div>
           </div>
-          
-            {% if room.host.superhost %}
-              <p>
-                {{room.host.first_name}} is superhost. Superhost is a host who boasts rich experience and
-                high rating and do their best to make their guests comfortable in their accommodation.
-              </p>
-            {% endif %}
-            
-        </div>
-        <div class="host-info__right">
-          <span>Response rate : 100%</span>
-          <span>Response time : In one hour</span>
-          <button>Connect the host</button>
         </div>
       </div>
     </div>
