--- a/templates/pages/root/home.html
+++ b/templates/pages/root/home.html
@@ -5,8 +5,12 @@
 {% endblock page_title %}
 
 {% block content %}
-  {% include 'mixins/room_card.html' with rooms=rooms %}
-  <div class="flex justify-center mt-20 itmes-center">
-    {% include 'mixins/page_number.html' with page=rooms %}
+<div class="flex flex-col items-center justify-items-center">
+  <div class="w-10/12">
+    {% include 'mixins/room_card.html' with rooms=rooms %}
+    <div class="flex justify-center mt-20 itmes-center">
+      {% include 'mixins/page_number.html' with page=rooms %}
+    </div>
   </div>
+</div>
 {% endblock content %}
