--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,9 @@
 <ul class="flex">
   {% if user.is_authenticated %}
     <li class="nav_link">
+      <a href="{% url 'rooms:create' %}">Create Room</a>
+    </li>
+    <li class="nav_link">
       <a href="{% url 'users:logout' %}">Log Out</a>
     </li>
     <li class="nav_link">
