--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -33,7 +33,7 @@
           @apply text-lg font-bold;
         }
         input {
-          @apply w-2/3 border border-gray-400 p-1 rounded-md;
+          @apply border border-gray-400 p-1 rounded-md;
         }
       }
       .select {
