--- a/templates/pages/rooms/detail.html
+++ b/templates/pages/rooms/detail.html
@@ -28,7 +28,10 @@
         </div>
       </div>
       <div class="grid grid-cols-2 grid-rows-2-200px gap-2 mb-12">
-        <img src="{{room.get_first_photo}}" class="row-span-full rounded-tl-lg rounded-bl-lg h-full w-full bg-cover bg-center" alt="Room Photo">
+        
+        {% if room.get_first_photo is not None %}
+          {{room.get_first_photo}}
+        {% endif %}
         <div class="grid grid-cols-2 grid-rows-2-200px gap-2">
           {% for index, photo in room.get_four_photo %}
             {% remainder_op index as remainder %}
